Changelog
=========

1.9 (2017-02-11)
----------------

- Added get_signup_redirect to allow custom implementations by subclasses

- Fixed invitation form displaying "None" when first displayed

- Fixed deprecation warnings

- Added get_signup_redirect to allow custom implementations by subclasses

- Fixed flake8 errors

- Import reverse from django.urls if available, otherwise fall back to old import

- Set ForeignKey field to explicitly cascade on deletion

- flake8 styling formatting

- Add email max length setting

1.8 (2016-10-19)
----------------

*TO BE ADDED*


1.7 (2016-02-10)
------------------------

- 1.7. [bee-keeper]

- Merge pull request #34 from percipient/dont-404. [bee-keeper]

  Display a message on expired/erroneous/accepted keys.

- Fix flake8 issues. [Patrick Cloke]

- Fix a formatting mistake in the README. [Patrick Cloke]

- Display a message on expired/erroneous/accepted keys. Related to #25.
  [Patrick Cloke]

- Merge pull request #33 from percipient/readme-settings. [bee-keeper]

  Fix-up the settings in the README

- Update the INVITATIONS_ADAPTER setting. [Patrick Cloke]

- Update the readme with all the settings. [Patrick Cloke]

- Removed uneeded check on send invite. [bee_keeper]

- Test new url spec. [bee_keeper]

- Merge pull request #32 from mjnaderi/patch-1. [bee-keeper]

  Remove RemovedInDjango110Warning warnings in Django 1.9

- Remove RemovedInDjango110Warning warnings in Django 1.9. [Mohammad
  Javad Naderi]

  With Django 1.9, each time I run `python manage.py runserver`, it shows 2 warnings:

  ```
  /someplace/.venv/lib/python2.7/site-packages/invitations/urls.py:15: RemovedInDjango110Warning: django.conf.urls.patterns() is deprecated and will be removed in Django 1.10. Update your urlpatterns to be a list of django.conf.urls.url() instances instead.
    name='accept-invite'),
