@@ -1,0 +1,8 @@
+from django.apps import AppConfig
+
+
+class Config(AppConfig):
+    """Config."""
+
+    name = 'invitations'
+    label = 'invitations'
