@@ -1,6 +1,12 @@
 Changelog
 =========
 
+x.x (yyyy-mm-dd)
+----------------
+(not yet released)
+
+- Added AppConfig.
+
 1.9 (2017-02-11)
 ----------------
 
